# docs/swagger.json
@@ -309,6 +309,39 @@
                 }
             }
         },
+        "/api/auth/user/limiter": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "修改用户限流设置",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    ""
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/system/api": {
             "get": {
                 "security": [
@@ -1186,6 +1219,17 @@
                 }
             }
         },
+        "model.Limiter": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "on": {
+                    "type": "boolean"
+                }
+            }
+        },
         "model.Menu": {
             "type": "object",
             "properties": {
@@ -1293,6 +1337,9 @@
                 },
                 "isSuperUser": {
                     "type": "boolean"
+                },
+                "limiter": {
+                    "$ref": "#/definitions/model.Limiter"
                 },
                 "nickname": {
                     "type": "string"
